News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/NXX2_Task_Staging__c.object-meta.xml
<CustomObject>
    <description>This will contain tasks from google cloud storage</description>
    <label>NXX2 Task Staging</label>
    <nameField>
        <label>NXX2 Task Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NXX2 Tasks Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>