News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Time__c</fullName>
    <label>Create Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>