News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>