News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Error_Details_For_Display__c.field-meta.xml
<CustomField>
    <fullName>Error_Details_For_Display__c</fullName>
    <label>Error Details For Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>