News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Error_Message_For_Display__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_For_Display__c</fullName>
    <label>Error Message For Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>