News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Has_Processed_For_Proof__c.field-meta.xml
<CustomField>
    <fullName>Has_Processed_For_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Processed For Proof</label>
    <type>Checkbox</type>
</CustomField>