News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Link_Desc__c.field-meta.xml
<CustomField>
    <fullName>Link_Desc__c</fullName>
    <label>Link Desc</label>
    <length>250</length>
    <type>Text</type>
</CustomField>