News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Processed_To_Create_Display_Ad__c.field-meta.xml
<CustomField>
    <fullName>Processed_To_Create_Display_Ad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed To Create Display Ad</label>
    <type>Checkbox</type>
</CustomField>