News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Processing_Status_For_Display__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status_For_Display__c</fullName>
    <label>Processing Status For Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>