News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <label>Product Order</label>
    <length>250</length>
    <type>Text</type>
</CustomField>