News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/ProofAd_Id__c.field-meta.xml
<CustomField>
    <fullName>ProofAd_Id__c</fullName>
    <label>ProofAd Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>