News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Related_Proof__c.field-meta.xml
<CustomField>
    <fullName>Related_Proof__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual proof which is created for the staging proof related to his task</description>
    <label>Related Proof</label>
    <referenceTo>SocialCampaign__c</referenceTo>
    <relationshipLabel>NXX2 Tasks Staging</relationshipLabel>
    <relationshipName>NXX2_Tasks_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>