News UAT/force-app/main/default/objects/NXX2_Task_Staging__c/fields/Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Time__c</fullName>
    <label>Update Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>